
Calligra Plan current:
----------------------

* Bug 286332 - Auto allocate selected resources to new tasks

* Improve printing:
    Add printing options to view configuration dialog
    Save/load option settings

Release 2.5:
------------

* Fix crash when two dependent tasks are deleted in one go

* Fix bug 301888 - New: setting task duration messes up schedule

* Fix bug 301326 - Export to pdf does not respect reports page layout

* Fix Bug 286564 -  plan do not update the resources allocation number when selected

* Add mpxj based filter capable of importing data from
  Planner, PrimaVera and various MS Project file formats,

Release 2.4:
------------
* Fix bug 292931: Crash when scheduling task of type Duration.

* Fix crash in reports due incorrect use of KoXml to QDom conversion

* Fix bug 291056 - Dates are sorted alphabetically and not by date / time

* Improve users control of work package merging

* PlanWork:
  Add remove document command
  Support adding new documents of any type
  Support updating existing reference documents

* Fix bug 259225: Display performance index numbers in red when spi/cpi is < 1.0

* Fix bug 286495: Update reports automatically when schedule changes

* Fix bug 286413: Use calendar popups for all datetimes

* Gantt chart: Use locale defined weekends/start of week

* Bug 286332: Initially expand resource group in the Task resource allocation dialog

* Resource assignment gantt chart: remember zoom and scale settings
  Ref bug 284349

* Improve view selector:
  Enable moving views and categories using drag and drop
  Fix various problems with the view selector dialogs

* Disable dbus adapter

* Fix scheduling of resources that works during daylight saving time changes

* Set datetime grid hour format in accordance with kde settings
  (Ref bug 284361)

* Fix bug 284349 Gantt chart: remember zoom and scale settings

* Task editor: Do allow editing of irrelevant data for summary tasks and milestones
